# DrebinFeatureExtractor

./: .env.sample  .gitignore  README-ja.md  README.md  anomaly_apks.lst  progress_watch.sh  pyproject.toml
src/: extractor.py  logger.py  main.py  settings.py  unpacker.py  utils.py
src/analyzer/: apk_info.py  features.py  intents.py  network.py  permissions.py  smali.py
src/extension/: extension_logger.py  extension_settings.py  feature_extraction_automation.py
src/report/: generator.py
