[project]
name = "drebinfeatureextractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil>=6.1.1",
    "python-dotenv>=1.0.1",
    "ssdeep-stubs>=0.0.1",
    "ssdeep>=3.4",
    "typer>=0.15.1",
    "ujson>=5.10.0",
]

[pyright]
typeCheckingMode = "standard"
